# FRC9214

./: .deployignore  .gitignore  README.md  cameraMatrix.npy  deploy.bat  dist.npy  pyproject.toml  release.json  team9214_requirements.txt
2023/code/: robot.py
2025/: README.md
2025/CAD/2025 ROBOT/Drawings/: NeoMotorMount.SLDDRW  Polycarbonate.SLDDRW  camera coverremake.SLDPRT
2025/CAD/elevator/: Assem1.SLDASM  plate1.SLDPRT  robot base.SLDPRT
2025/CAD/experiments/: calibration block.SLDPRT  calibration block.STL
2025/CAD/temporary files/: Assem1.SLDASM
2025/code/Arm/: RobotArmStartLimit.py
2025/code/GUI/: ClickableField2023WithAreas.py  field_coordinates.json
2025/code/tank drive/: robot.py
2025/code/tankdrive/: RobotAutonomous_1.py  RobotAutonomous_2.py  RobotDriveArm.py  dashboard_updater.py  robot.py  robotDriveArmIntake.py
2025/grants/: grantwatch_page1.html
2025/grants/grantwatch_scraper/: grant_data.js  grant_data_converter.py  grantwatch_all_pages.csv  grantwatch_grants.csv  index.html  popup.js
2025/pathfinding/: obstacle.py
2025/pathfinding/Vectorbased/: obstacles.json
2025/pathfinding/astar/: obstacles.json
2026/: README.md
2026/CAD/: ball.SLDPRT
2026/CAD/2026 ROBOT/: FTC Intake Device.SLDPRT
2026/CAD/Devin/: guiderail mount.SLDPRT
2026/CAD/Robot/: V2.SLDASM  battery holder.SLDPRT  carpet.SLDPRT
2026/CAD/ToolBox/: Copy of Assem2.SLDASM  ToolBox.SLDASM  cabinet.SLDASM
2026/CAD/temporary files/: Part1.SLDPRT  bolt.SLDPRT
2026/code/GUI/v3/Robot/: pyproject.toml  robot.py
2026/code/experiments/V4 GUI Odometry/Robot/: pyproject.toml  robot.py
2026/code/experiments/V9.5 Rev EasySwerve/python/: constants.py  pyproject.toml  robot.py
2026/code/experiments/V9.5 Rev EasySwerve/python/subsystems/: __init__.py  drive_subsystem.py  easy_swerve_module.py
2026/code/ros_package/: .gitignore  README.md
2026/code/ros_package/team9214_ws/src/arena_bringup/: README.md  package.xml  setup.cfg  setup.py
2026/code/ros_package/team9214_ws/src/arena_bringup/arena_bringup/: __init__.py  apriltag_overlay.py  autonomy_mode_manager.py  cmd_vel_nt4_bridge.py  get_tag_distance.py  nt4_mode_bridge.py  sim_inputs.py  tag_test_monitor.py
2026/code/ros_package/team9214_ws/src/arena_bringup/behavior_trees/: arena_bt_nodes_model.xml  custom_bt.xml  custom_bt_variant.xml
2026/code/ros_package/team9214_ws/src/arena_bringup/config/: bringup.yaml  observer_runtime.yaml  rviz.rviz
2026/code/ros_package/team9214_ws/src/arena_bringup/docs/: README.md  bringup_multi_cam_nodes_topics.puml  camera_calibration.md  camera_calibration_notes.md  camera_check.md  index.md  roborio_to_team9214_blackbox.puml
2026/code/ros_package/team9214_ws/src/arena_bringup/docs/diagrams/: README.md  docker-compose.yaml  flow__bringup__combined__overview.puml  flow__bringup__single_cam__overview.puml  flow__localization__ekf_map__overview.puml  flow__navigation__stack__overview.puml  flow__sim__harness__overview.puml  table__roborio__ros_to_nt4__map.puml  topics__bringup__multi_cam__per_node.puml  topics__localization__ekf_map__per_node.puml  topics__navigation__stack__per_node.puml  topics__sim__harness__per_node.puml  topics__sim__inputs__generated.puml
2026/code/ros_package/team9214_ws/src/arena_bringup/docs/excel/: node_topics_sim_stack.xlsx
2026/code/ros_package/team9214_ws/src/arena_bringup/helper/: get_tag_distance.py  transfer_text.txt
2026/code/ros_package/team9214_ws/src/arena_bringup/launch/: bringup_multi_cam.launch.py  bringup_single_cam.launch.py  localization.launch.py  navigation.launch.py  sim_harness.launch.py  usb_cam_calibration.launch.py
2026/code/ros_package/team9214_ws/src/arena_bringup/params/: nav2_params.yaml  nav2_params_sim.yaml
2026/code/ros_package/team9214_ws/src/arena_bringup/resource/: arena_bringup
2026/code/ros_package/team9214_ws/src/arena_bt_nodes/: CMakeLists.txt  README.md  package.xml
2026/code/ros_package/team9214_ws/src/arena_bt_nodes/behavior_design_docs/: continuous_autonomous_looping_for_sim.md
2026/code/ros_package/team9214_ws/src/arena_bt_nodes/config/: custom_nodes_example_bt.xml
2026/code/ros_package/team9214_ws/src/arena_bt_nodes/include/arena_bt_nodes/: is_battery_ok_node.hpp  register_nodes.hpp
2026/code/ros_package/team9214_ws/src/arena_bt_nodes/src/: generate_bt_model_xml.cpp  is_battery_ok_node.cpp  plugin_entrypoint.cpp  register_nodes.cpp
2026/code/ros_package/team9214_ws/src/arena_tag_map/: CMakeLists.txt  README.md  package.xml
2026/code/ros_package/team9214_ws/src/arena_tag_map/config/: 757-lab_arena_tags.yaml  arena_tags.yaml  camera_test_arena_tags.yaml  example_arena_tags.yaml  frc2026_apriltag_ros.yaml  frc2026_field_blank.pgm  frc2026_field_blank.yaml  frc2026_tag_static_tfs.yaml  generate_dinning_room_map_request.yaml  generate_map_request_example.yaml
2026/code/ros_package/team9214_ws/src/arena_tag_map/config/dinning_room/: dinning_room.pgm  dinning_room.yaml  dinning_room_arena_tags.yaml
2026/code/ros_package/team9214_ws/src/arena_tag_map/scripts/: generate_world_and_tag_maps.py  load_map_in_nav2.sh
2026/code/ros_package/team9214_ws/src/localization_fusion/: CMakeLists.txt  README.md  package.xml
2026/code/ros_package/team9214_ws/src/localization_fusion/config/: ekf_map.yaml  ekf_odom.yaml
2026/code/ros_package/team9214_ws/src/localization_fusion/launch/: fusion.launch.py
2026/code/ros_package/team9214_ws/src/tag_pose_observer/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
2026/code/ros_package/team9214_ws/src/tag_pose_observer/config/: observer.yaml
2026/code/ros_package/team9214_ws/src/tag_pose_observer/launch/: observer.launch.py
2026/code/ros_package/team9214_ws/src/tag_pose_observer/tag_pose_observer/: __init__.py  observer_node.py
2026/grants/: grantwatch.py
2026/grants/grantwatch_scraper/: content.js  grant_data.csv  manifest.json  popup.html
deploy/: Drive.py  DriveNETWORKTABLES.py  arm.py  arm_calibration.py  fffffrobot.py  nrnrobot.py  pyproject.toml  robot copy.py  robot.py  test.py
deploy/calibration/: distance_data.csv
(+1335 files in other folders)
