[project]
name = "frc-robot"
version = "2026.2.1.1"
description = "FRC 9214 Robot Code - EasySwerve Drive"
authors = [
	{name = "Team 9214"}
]
requires-python = ">=3.8"

dependencies = [
	"robotpy==2026.2.1.1",
	"robotpy-rev==2026.0.3.1",
	"robotpy-navx==2026.0.1",
	"pynetworktables>=2021.0.0"
]

[tool.robotpy]
robotpy_version = "2026.2.1.1"
robotCommand = "python -m robot"
requires = [
	"robotpy-rev==2026.0.3.1",
	"robotpy-navx==2026.0.1"
]
