<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arena_bringup</name>
  <version>0.0.1</version>
  <description>Top-level launch package for arena localization and navigation bringup.</description>
  <maintainer email="sidenoteemail@gmail.com">robots</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pyntcore</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>arena_description</exec_depend>
  <exec_depend>arena_tag_map</exec_depend>
  <exec_depend>localization_fusion</exec_depend>
  <exec_depend>tag_pose_observer</exec_depend>

  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
