<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arena_bt_nodes</name>
  <version>0.0.1</version>
  <description>Starter BehaviorTree.CPP plugin package for custom Nav2 BT nodes and Groot2 node model generation.</description>
  <maintainer email="sidenoteemail@gmail.com">robots</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
