<?xml version="1.0"?>
<package format="3">
  <name>tag_pose_observer</name>
  <version>0.0.1</version>
  <description>
    Computes map-frame base pose observations from AprilTag detections using a known tag map and TF.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system: Python -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>

  <!-- Python libraries typically pulled via pip/apt; still list as exec depends -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <!-- Useful if you later add message conversions or time utilities -->
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- Optional (keep commented unless you add tests) -->
  <!--
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
